--- a/sample.yaml
+++ b/sample.yaml
@@ -1,6 +1,17 @@
--name: playbook1
-hosts: all
-tasks: print fruit names
-    -grapes
-    -mangoes
-    -apples
+- name: Play1 
+  hosts: all 
+  tasks:
+      - name: Print Hello from task1 of play1 
+        ansible.builtin.debug:
+              msg: Hai from task1 of play1 
+
+      - name: Print Hello from task2 of play1 
+        ansible.builtin.debug:
+            msg: Hai from task2 of play1 
+
+- name: Play2
+  hosts: dev 
+  tasks:
+    - name: Print Hello from task2 of play1 
+      ansible.builtin.debug:
+            msg: Hai from dev task1 of play2
