--- a/sample.yaml
+++ b/sample.yaml
@@ -12,6 +12,8 @@
 - name: Play2
   hosts: dev 
   tasks:
-    - name: Print Hello from task2 of play1 
+    - name: Print fruits
       ansible.builtin.debug:
-            msg: Hai from dev task1 of play2
+            -apple
+            -mango
+            -strawberry
