--- a/robot-dryrun.yml
+++ b/robot-dryrun.yml
@@ -8,7 +8,7 @@
     region: "us-east-1"
   tasks:
     - name: Launching instance
-      amazon.aws.ec2:
+      ec2:
          count: 1
          group_id: "{{ security_group_id }}"
          instance_type: "{{ instance_type }}"
@@ -16,7 +16,7 @@
          wait: true
          region: "{{ region }}"
          instance_tags:
-          Name: ansible-drurun
+          Name: ansible-dryrun
       register: ec2
 
     - name: Adding instance to the host group
