--- a/robot-dryrun.yml
+++ b/robot-dryrun.yml
@@ -8,7 +8,7 @@
     region: "us-east-1"
   tasks:
     - name: Launching instance
-      ec2:
+      amazon.aws.ec2:
          count: 1
          group_id: "{{ security_group_id }}"
          instance_type: "{{ instance_type }}"
@@ -51,7 +51,7 @@
       always:
         - name: Terminate instances that were previously launched
           delegate_to: 127.0.0.1
-          ec2:
+          amazon.aws.ec2:
             state: 'absent'
             instance_ids: '{{ INSTANCE_ID }}'
             region: us-east-1
